Frogjump Instructions & Blog fix
The gitignore has been updated to ignore assets relating to the blog.

--- a/public/stylesheets/color_palette/dark_mode.css
+++ b/public/stylesheets/color_palette/dark_mode.css
@@ -7,7 +7,7 @@
     --color3: #008170;
     --color4: #008170;
     --color5: #0e302e;
-    --textcolor: black;
+    --textcolor: white;
 }
 
 /* .link-card {
